se realizaron cambio en apariencia

--- a/index.html
+++ b/index.html
@@ -3,41 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web</title>
+    <title>Blog de Diana Sánchez - Cosméticos y Belleza</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenido a Mi Página Web</h1>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Acerca de</a></li>
-            <li><a href="#">Servicios</a></li>
-            <li><a href="#">Contacto</a></li>
-        </ul>
-    </nav>
-    <main>
-        <section>
-            <h2>Acerca de Nosotros</h2>
-            <p>Somos una empresa comprometida con...</p>
-        </section>
-        <section>
-            <h2>Nuestros Servicios</h2>
+        <h1>Blog de Diana Sánchez</h1>
+        <nav>
             <ul>
-                <li>Servicio 1</li>
-                <li>Servicio 2</li>
-                <li>Servicio 3</li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#tendencias">Tendencias</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#biografia">Biografía</a></li>
             </ul>
-        </section>
-        <section>
-            <h2>Contacto</h2>
-            <p>Puedes ponerte en contacto con nosotros en...</p>
-        </section>
-    </main>
+        </nav>
+    </header>
+
+    <section id="inicio">
+        <h2>Bienvenido a mi blog</h2>
+        <p>Explora las últimas tendencias, innovaciones y consejos en el mundo de la cosmética y la belleza.</p>
+    </section>
+
+    <section id="tendencias">
+        <h2>Tendencias en Cosméticos</h2>
+        <p>Mantente al día con las últimas tendencias y descubre cómo la industria está evolucionando.</p>
+    </section>
+
+    <section id="productos">
+        <h2>Guías de Productos y Recomendaciones</h2>
+        <p>Explora reseñas detalladas de productos de belleza y descubre los mejores productos para ti.</p>
+    </section>
+
+    <section id="cursos">
+        <h2>Cursos y Tutoriales</h2>
+        <p>Aprende sobre formulación de productos y estrategias de marketing en la industria cosmética.</p>
+    </section>
+
+    <section id="biografia">
+        <h2>Biografía de Diana Sánchez</h2>
+        <p>¡Hola! Soy Diana Sánchez, una apasionada química farmacéutica con más de 10 años de experiencia...</p>
+    </section>
+
     <footer>
         <p>Derechos de autor © 2023. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
+
