--- a/index.html
+++ b/index.html
@@ -1,48 +1,110 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog de Diana Sánchez - Cosméticos y Belleza</title>
-    <link rel="stylesheet" href="styles.css">
+        /* Estilos generales */
+    body {
+        font-family: 'Arial', sans-serif;
+        margin: 0;
+        padding: 0;
+        background-color: #f9f9f9;
+    }
+
+    /* Encabezado */
+    header {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 20px;
+    }
+
+    /* Secciones */
+    section {
+        padding: 40px;
+        background-color: white;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        margin-bottom: 30px;
+    }
+
+    section h2 {
+        font-size: 24px;
+        margin-bottom: 20px;
+        color: #333;
+    }
+
+    section p {
+        font-size: 16px;
+        line-height: 1.6;
+        color: #666;
+    }
+
+    /* Pie de página */
+    footer {
+        background-color: #333;
+        color: white;
+        text-align: center;
+        padding: 10px;
+    }
+
+    /* Enlaces */
+    a {
+        color: #007BFF;
+        text-decoration: none;
+        transition: color 0.3s;
+    }
+
+    a:hover {
+        color: #0056b3;
+    }
+
+    /* Cambios en enlaces de encabezado */
+    header a {
+        color: white;
+    }
+
+    header a:hover {
+        color: #ddd;
+    }
+
+    </style>
 </head>
 <body>
     <header>
-        <h1>Blog de Diana Sánchez</h1>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#tendencias">Tendencias</a></li>
-                <li><a href="#productos">Productos</a></li>
-                <li><a href="#cursos">Cursos</a></li>
-                <li><a href="#biografia">Biografía</a></li>
-            </ul>
-        </nav>
+        <h1>Blog de Diana Sánchez - Cosméticos y Belleza</h1>
     </header>
 
-    <section id="inicio">
-        <h2>Bienvenido a mi blog</h2>
-        <p>Explora las últimas tendencias, innovaciones y consejos en el mundo de la cosmética y la belleza.</p>
-    </section>
-
-    <section id="tendencias">
-        <h2>Tendencias en Cosméticos</h2>
-        <p>Mantente al día con las últimas tendencias y descubre cómo la industria está evolucionando.</p>
-    </section>
-
-    <section id="productos">
-        <h2>Guías de Productos y Recomendaciones</h2>
-        <p>Explora reseñas detalladas de productos de belleza y descubre los mejores productos para ti.</p>
+    <section id="biografia">
+        <h2>Sección 1: Biografía</h2>
+        <p>¡Saludos! Soy Diana Sánchez, una apasionada química farmacéutica con una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi experiencia como especialista en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
     </section>
 
     <section id="cursos">
-        <h2>Cursos y Tutoriales</h2>
-        <p>Aprende sobre formulación de productos y estrategias de marketing en la industria cosmética.</p>
+        <h2>Sección 2: Cursos</h2>
+        <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
     </section>
 
-    <section id="biografia">
-        <h2>Biografía de Diana Sánchez</h2>
-        <p>¡Hola! Soy Diana Sánchez, una apasionada química farmacéutica con más de 10 años de experiencia...</p>
+    <section id="talleres">
+        <h2>Sección 3: Talleres</h2>
+        <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
+    </section>
+
+    <section id="expertos">
+        <h2>Sección 4: Entrevista Expertos</h2>
+        <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
+    </section>
+
+    <section id="tendencias">
+        <h2>Sección 5: Tendencias</h2>
+        <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
+    </section>
+
+    <section id="productos">
+        <h2>Sección 6: Productos</h2>
+        <p>Explora reseñas detalladas y recomendaciones de productos de belleza seleccionados especialmente para ti.</p>
+    </section>
+
+    <section id="contacto">
+        <h2>Sección 7: Contacto</h2>
+        <p>Para consultas y colaboraciones, contáctame a través de mi correo electrónico dianamsanchez88@gmail.com o llámame al teléfono 3017879250.</p>
     </section>
 
     <footer>
@@ -50,4 +112,3 @@
     </footer>
 </body>
 </html>
-
