--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <style>
         /* Estilos generales */
     body {
         font-family: 'Arial', sans-serif;
