--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
         background-color: #f9f9f9;
     }
 
+            h1 {
+            font-family: 'Pacifico', cursive;
+            font-style: italic; /* Agrega esta línea para ponerlo en cursiva */
+            font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
+            /* Otros estilos que desees aplicar al título */
+        }
     /* Encabezado */
     header {
         background-color: #333;
