--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     }
 
             h1 {
-            font-family: 'Pacifico', cursive;
+            font-family: 'Lobster', cursive;
             font-style: italic; /* Agrega esta línea para ponerlo en cursiva */
             font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
             /* Otros estilos que desees aplicar al título */
