--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog de Diana Sánchez - Cosméticos y Belleza</title>
+    <title>Blog Cosméticos Aseo- DS</title>
     <style>
         /* Estilos generales */
     body {
