--- a/index.html
+++ b/index.html
@@ -80,41 +80,41 @@
 </head>
 <body>
     <header>
-        <h1>Blog de Diana Sánchez - Cosméticos y Belleza</h1>
+        <h1>Blog Cosméticos Aseo- DS</h1>
     </header>
 
     <section id="biografia">
-        <h2>Sección 1: Biografía</h2>
+        <h2>Biografía</h2>
         <p>¡Saludos! Soy Diana Sánchez, una apasionada química farmacéutica con una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi experiencia como especialista en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
     </section>
 
     <section id="cursos">
-        <h2>Sección 2: Cursos</h2>
+        <h2>Cursos</h2>
         <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
     </section>
 
     <section id="talleres">
-        <h2>Sección 3: Talleres</h2>
+        <h2>Talleres</h2>
         <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
     </section>
 
     <section id="expertos">
-        <h2>Sección 4: Entrevista Expertos</h2>
+        <h2>Entrevista Expertos</h2>
         <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
     </section>
 
     <section id="tendencias">
-        <h2>Sección 5: Tendencias</h2>
+        <h2>Tendencias</h2>
         <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
     </section>
 
     <section id="productos">
-        <h2>Sección 6: Productos</h2>
+        <h2>Productos</h2>
         <p>Explora reseñas detalladas y recomendaciones de productos de belleza seleccionados especialmente para ti.</p>
     </section>
 
     <section id="contacto">
-        <h2>Sección 7: Contacto</h2>
+        <h2>Contacto</h2>
         <p>Para consultas y colaboraciones, contáctame a través de mi correo electrónico dianamsanchez88@gmail.com o llámame al teléfono 3017879250.</p>
     </section>
 
