--- a/index.html
+++ b/index.html
@@ -6,75 +6,52 @@
     <title>Blog Cosméticos Aseo- DS</title>
     <style>
         /* Estilos generales */
-    body {
-        font-family: 'Arial', sans-serif;
+    body {font-family: 'Arial', sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #f9f9f9;
-    }
+        background-color: #f9f9f9; }
 
-            h1 {
-            font-family: 'Lobster', cursive;
+            h1 {font-family: 'Lobster', cursive;
             font-style: italic; /* Agrega esta línea para ponerlo en cursiva */
             font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
-            /* Otros estilos que desees aplicar al título */
-        }
-        
+            /* Otros estilos que desees aplicar al título */}
+            
     /* Encabezado */
-    header {
-        background-color: #333;
+    header {background-color: #333;
         color: white;
         text-align: center;
-        padding: 20px;
-    }
+        padding: 20px;}
 
     /* Secciones */
-    section {
-        padding: 40px;
+    section {padding: 40px;
         background-color: white;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        margin-bottom: 30px;
-    }
+        margin-bottom: 30px; }
 
-    section h2 {
-        font-size: 24px;
+    section h2 { font-size: 24px;
         margin-bottom: 20px;
-        color: #333;
-    }
+        color: #333;}
 
-    section p {
-        font-size: 16px;
+    section p {font-size: 16px;
         line-height: 1.6;
-        color: #666;
-    }
+        color: #666;}
 
     /* Pie de página */
-    footer {
-        background-color: #333;
+    footer {background-color: #333;
         color: white;
         text-align: center;
-        padding: 10px;
-    }
+        padding: 10px;}
 
     /* Enlaces */
-    a {
-        color: #007BFF;
+    a {color: #007BFF;
         text-decoration: none;
-        transition: color 0.3s;
-    }
+        transition: color 0.3s; }
 
-    a:hover {
-        color: #0056b3;
-    }
+    a:hover {color: #0056b3;}
 
     /* Cambios en enlaces de encabezado */
-    header a {
-        color: white;
-    }
-
-    header a:hover {
-        color: #ddd;
-    }
+    header a {color: white;}
+    header a:hover {color: #ddd;}
 
     </style>
 </head>
