--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Cosméticos Aseo- DS</title>
+    <title>Blog Cosméticos Aseo- DS</title>}
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+       
     <style>
         /* Estilos generales */
     body {font-family: 'Arial', sans-serif;
@@ -11,11 +13,11 @@
         padding: 0;
         background-color: #f9f9f9; }
 
-            h1 {font-family: 'Lobster', cursive;
+            h1 {font-family: 'Zeyada', cursive;
             font-style: italic; /* Agrega esta línea para ponerlo en cursiva */
-            font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
+            font-size: 50px; /* Ajusta el tamaño de fuente según tus preferencias */
             /* Otros estilos que desees aplicar al título */}
-            
+
     /* Encabezado */
     header {background-color: #333;
         color: white;
