--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <h1>Blog Cosméticos Aseo- DS</h1>
     </header>
 
-    <section id="biografia">
+    <section id="biografia" class="contenido-con-imagen"></section>>
         <h2>Biografía</h2>
         <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-izquierda">
         <div class="texto-derecha"></div>
