--- a/index.html
+++ b/index.html
@@ -18,6 +18,33 @@
             font-size: 70px; /* Ajusta el tamaño de fuente según tus preferencias */
             /* Otros estilos que desees aplicar al título */}
 
+            /* Agrega este CSS en la sección <style> de tu archivo */
+    .contenido-con-imagen {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;}
+
+    .imagen-izquierda {
+        max-width: 50%;
+        order: 1; /* Cambia el orden de aparición */}
+
+    .imagen-derecha {
+        max-width: 50%;
+        order: 2; /* Cambia el orden de aparición */}
+
+    .texto-derecha {
+        flex: 1;
+        padding-left: 20px;
+        text-align: left;
+        order: 1; /* Cambia el orden de aparición */}
+
+    .texto-izquierda {
+        flex: 1;
+        padding-right: 20px;
+        text-align: right;
+        order: 2; /* Cambia el orden de aparición */}
+
+
     /* Encabezado */
     header {background-color: #333;
         color: white;
