--- a/index.html
+++ b/index.html
@@ -8,80 +8,42 @@
        
     <style>
         /* Estilos generales */
-    body {font-family: 'Arial', sans-serif;
-        margin: 0;
-        padding: 0;
-        background-color: #f9f9f9; }
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+        }
 
-            h1 {font-family: 'Zeyada', cursive;
-            font-style: italic; /* Agrega esta línea para ponerlo en cursiva */
-            font-size: 70px; /* Ajusta el tamaño de fuente según tus preferencias */
-            /* Otros estilos que desees aplicar al título */}
+        h1 {
+            font-family: 'Zeyada', cursive;
+            font-style: italic;
+            font-size: 70px;
+        }
 
-            /* Agrega este CSS en la sección <style> de tu archivo */
-    .contenido-con-imagen {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;}
+        /* Estilos para las secciones con imágenes */
+        .contenido-con-imagen {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
 
-    .imagen-izquierda {
-        max-width: 50%;
-        order: 1; /* Cambia el orden de aparición */}
+        .imagen-izquierda,
+        .imagen-derecha {
+            max-width: 50%;
+        }
 
-    .imagen-derecha {
-        max-width: 50%;
-        order: 2; /* Cambia el orden de aparición */}
+        .texto-derecha,
+        .texto-izquierda {
+            flex: 1;
+            padding: 0 20px;
+        }
 
-    .texto-derecha {
-        flex: 1;
-        padding-left: 20px;
-        text-align: left;
-        order: 1; /* Cambia el orden de aparición */}
+        .texto-derecha {
+            text-align: right;
+        }
 
-    .texto-izquierda {
-        flex: 1;
-        padding-right: 20px;
-        text-align: right;
-        order: 2; /* Cambia el orden de aparición */}
-
-
-    /* Encabezado */
-    header {background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 20px;}
-
-    /* Secciones */
-    section {padding: 40px;
-        background-color: white;
-        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        margin-bottom: 30px; }
-
-    section h2 { font-size: 24px;
-        margin-bottom: 20px;
-        color: #333;}
-
-    section p {font-size: 16px;
-        line-height: 1.6;
-        color: #666;}
-
-    /* Pie de página */
-    footer {background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 10px;}
-
-    /* Enlaces */
-    a {color: #007BFF;
-        text-decoration: none;
-        transition: color 0.3s; }
-
-    a:hover {color: #0056b3;}
-
-    /* Cambios en enlaces de encabezado */
-    header a {color: white;}
-    header a:hover {color: #ddd;}
-
+        /* Resto de tus estilos CSS... */
     </style>
 </head>
 <body>
@@ -107,33 +69,9 @@
             <h2>Cursos</h2>
             <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
         </div>
-    </section>    
-
-
-    <section id="talleres">
-        <h2>Talleres</h2>
-        <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
     </section>
 
-    <section id="expertos">
-        <h2>Entrevista Expertos</h2>
-        <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
-    </section>
-
-    <section id="tendencias">
-        <h2>Tendencias</h2>
-        <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
-    </section>
-
-    <section id="productos">
-        <h2>Productos</h2>
-        <p>Explora reseñas detalladas y recomendaciones de productos de belleza seleccionados especialmente para ti.</p>
-    </section>
-
-    <section id="contacto">
-        <h2>Contacto</h2>
-        <p>Para consultas y colaboraciones, contáctame a través de mi correo electrónico dianamsanchez88@gmail.com o llámame al teléfono 3017879250.</p>
-    </section>
+    <!-- Resto de tus secciones... -->
 
     <footer>
         <p>Derechos de autor © 2023. Todos los derechos reservados.</p>
