--- a/index.html
+++ b/index.html
@@ -109,20 +109,44 @@
         </div>
     </section>
 
-
-    <section id="talleres">
-        <h2>Talleres</h2>
-        <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
+    <section id="talleres" class="contenido-con-imagen">
+        <div class="imagen-izquierda">
+            <img src="https://unsplash.com/es/fotos/ruJm3dBXCqw">
+        </div>
+        <div class="texto-derecha">
+            <h2>Talleres/h2>
+            <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
+        </div>
     </section>
 
-    <section id="expertos">
-        <h2>Entrevista Expertos</h2>
-        <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
+    <section id="expertos" class="contenido-con-imagen">
+        <div class="imagen-derecha">
+            <img src="https://unsplash.com/es/fotos/8uZPynIu-rQ">
+        </div>
+        <div class="texto-izquierda">
+            <h2>Expertos</h2>
+            <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
+        </div>
     </section>
 
-    <section id="tendencias">
-        <h2>Tendencias</h2>
-        <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
+    <section id="tendencias" class="contenido-con-imagen">
+        <div class="imagen-izquierda">
+            <img src="https://unsplash.com/es/fotos/OG44d93iNJk">
+        </div>
+        <div class="texto-derecha">
+            <h2>Tendencias</h2>
+            <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
+        </div>
+    </section>
+
+    <section id="productos" class="contenido-con-imagen">
+        <div class="imagen-derecha">
+            <img src="https://unsplash.com/es/fotos/ruJm3dBXCqw">
+        </div>
+        <div class="texto-izquierda">
+            <h2>Productos</h2>
+            <p>Explora reseñas detalladas y recomendaciones de productos de belleza seleccionados especialmente para ti.</p>
+        </div>
     </section>
 
     <section id="productos">
