--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <section id="biografia" class="contenido-con-imagen">
         <div class="imagen-izquierda">
-            <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía">
+            <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
         </div>
         <div class="texto-derecha">
             <h2>Biografía</h2>
@@ -101,7 +101,7 @@
     
     <section id="cursos" class="contenido-con-imagen">
         <div class="imagen-derecha">
-            <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos">
+            <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun">
         </div>
         <div class="texto-izquierda">
             <h2>Cursos</h2>
@@ -111,7 +111,7 @@
 
     <section id="talleres" class="contenido-con-imagen">
         <div class="imagen-izquierda">
-            <img src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de talleres">
+            <img src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de talleres" class="imagen-comun">
         </div>
         <div class="texto-derecha">
             <h2>Talleres/h2>
@@ -121,7 +121,7 @@
 
     <section id="expertos" class="contenido-con-imagen">
         <div class="imagen-derecha">
-            <img src="https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de expertos">
+            <img src="https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de expertos" class="imagen-comun">
         </div>
         <div class="texto-izquierda">
             <h2>Expertos</h2>
@@ -131,7 +131,7 @@
 
     <section id="tendencias" class="contenido-con-imagen">
         <div class="imagen-izquierda">
-            <img src="https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias">
+            <img src="https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias" class="imagen-comun">
         </div>
         <div class="texto-derecha">
             <h2>Tendencias</h2>
@@ -141,7 +141,7 @@
 
     <section id="productos" class="contenido-con-imagen">
         <div class="imagen-derecha">
-            <img src="https://images.unsplash.com/photo-1574281183650-14db8f28c259?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de productos">
+            <img src="https://images.unsplash.com/photo-1574281183650-14db8f28c259?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de productos" class="imagen-comun">
         </div>
         <div class="texto-izquierda">
             <h2>Productos</h2>
