--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
         order: 2; /* Cambia el orden de aparición */}
 
 
+            .imagen-comun {
+        width: 300px; /* Ajusta el ancho según tu preferencia */
+        height: auto; /* Esto mantiene la proporción de aspecto original */}
+
+
     /* Encabezado */
     header {background-color: #333;
         color: white;
