--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <img src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de talleres" class="imagen-comun">
         </div>
         <div class="texto-derecha">
-            <h2>Talleres/h2>
+            <h2>Talleres</h2>
             <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
         </div>
     </section>
