--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             max-width: 50%;
             order: 2; /* Cambia el orden de aparición */}
     
-        .texto-derecha {
+        .texto-izquierda {
             flex: 1;
             padding-left: 20px;
             text-align: left;
@@ -99,7 +99,7 @@
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
             </div>
-            <div class="texto-derecha">
+            <div class="texto-izquierda">
                 <h2>Biografía</h2>
                 <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
             </div>
@@ -119,7 +119,7 @@
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de talleres" class="imagen-comun">
             </div>
-            <div class="texto-derecha">
+            <div class="texto-izquierda">
                 <h2>Talleres</h2>
                 <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
             </div>
