--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             max-width: 50%;
             order: 2; /* Cambia el orden de aparición */}
     
-        .texto-izquierda {
+        .texto-derecha {
             flex: 1;
             padding-left: 20px;
             text-align: left;
             order: 1; /* Cambia el orden de aparición */}
     
-        .texto-izquierda {
+        .texto-derecha {
             flex: 1;
             padding-right: 20px;
             text-align: right;
@@ -99,8 +99,8 @@
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
-                <h2>Biografía</h2>
+            <div class="texto-derecha">
+                <h2><a href="#biografia">Biografía</a></h2>
                 <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
             </div>
         </section>
@@ -109,7 +109,7 @@
             <div class="imagen-derecha">
                 <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
+            <div class="texto-derechaa">
                 <h2>Cursos</h2>
                 <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
             </div>
@@ -119,7 +119,7 @@
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1557672172-298e090bd0f1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de talleres" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
+            <div class="texto-derecha">
                 <h2>Talleres</h2>
                 <p>Participa en nuestros talleres prácticos y descubre técnicas innovadoras en el mundo de la belleza.</p>
             </div>
@@ -129,7 +129,7 @@
             <div class="imagen-derecha">
                 <img src="https://images.unsplash.com/photo-1553356084-58ef4a67b2a7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de expertos" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
+            <div class="texto-derecha">
                 <h2>Expertos</h2>
                 <p>Conoce a expertos de la industria y descubre sus conocimientos y consejos exclusivos.</p>
             </div>
@@ -139,7 +139,7 @@
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
+            <div class="texto-derecha">
                 <h2>Tendencias</h2>
                 <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
             </div>
@@ -149,7 +149,7 @@
             <div class="imagen-derecha">
                 <img src="https://images.unsplash.com/photo-1574281183650-14db8f28c259?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de productos" class="imagen-comun">
             </div>
-            <div class="texto-izquierda">
+            <div class="texto-derecha">
                 <h2>Productos</h2>
                 <p>Explora reseñas detalladas y recomendaciones de productos de belleza seleccionados especialmente para ti.</p>
             </div>
