--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
         header a:hover {color: #ddd;}
     
         </style>
+    <script>
+        function mostrarBiografia() {
+            var biografia = document.getElementById("biografia-info");
+            biografia.style.display = "block";
+    }
+</script>
+
     </head>
     <body>
         <header>
@@ -100,16 +107,22 @@
                 <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
             </div>
             <div class="texto-derecha">
-                <h2><a href="#biografia">Biografía</a></h2>
-                <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
+                <h2><a href="javascript:void(0);" onclick="mostrarBiografia()">Biografía</a></h2>
+                <p>¡Saludos! Soy Diana Sánchez, para conocer más información  click aquí</p>
             </div>
+        </section>
+
+        <section id="biografia-info" style="display: none;">
+            <!-- Aquí puedes agregar más información de la biografía -->
+            <h2>Biografía de Diana Sánchez</h2>
+            <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!</p>
         </section>
         
         <section id="cursos" class="contenido-con-imagen">
             <div class="imagen-derecha">
                 <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun">
             </div>
-            <div class="texto-derechaa">
+            <div class="texto-derecha">
                 <h2>Cursos</h2>
                 <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
             </div>
