--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                 <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
             </div>
             <div class="texto-derecha">
-                <h2><a href="javascript:void(0);" onclick="mostrarBiografia()">Biografía</a></h2>
-                <p>¡Saludos! Soy Diana Sánchez, para conocer más información  click aquí</p>
+                <h2><a href="biografia.html">Biografía</a></h2>
+                <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética...</p>
             </div>
+            
         </section>
 
         <section id="biografia-info" style="display: none;">
