--- a/Biografía.html
+++ b/Biografía.html
@@ -7,6 +7,15 @@
     <!-- Enlaces a estilos o scripts si es necesario -->
 </head>
 <body>
+
+        <style>
+            body {
+                background-image: url('https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun');
+                background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
+                background-repeat: no-repeat; /* Evitará la repetición de la imagen */
+            }
+        </style>
+        
     <!-- Contenido de la página de biografía -->
     <header>
         <h1>Biografía de Diana Sánchez</h1>
