--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         </style>
     <script>
         function mostrarBiografia() {
-            var biografia = document.getElementById("biografia-info");
-            biografia.style.display = "block";
+            var Biografía = document.getElementById("biografia-info");
+            Biografía.style.display = "block";
     }
 </script>
 
@@ -102,7 +102,7 @@
             <h1>Blog Cosméticos Aseo- DS</h1>
         </header>
     
-        <section id="biografia" class="contenido-con-imagen">
+        <section id="Biografía" class="contenido-con-imagen">
             <div class="imagen-izquierda">
                 <img src="https://images.unsplash.com/photo-1521133573892-e44906baee46?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de biografía" class="imagen-comun">
             </div>
