--- a/Biografía.html
+++ b/Biografía.html
@@ -28,7 +28,7 @@
 <body>
     <!-- Contenido de la página de biografía -->
     <header>
-        <h1></h1>
+        <h1>Biografía de Diana Sánchez</h1>
     </header>
 
     <section id="biografia-info">
