--- a/Cursos.html
+++ b/Cursos.html
@@ -1,16 +1,71 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Biografía de Diana Sánchez</title>
+    <!-- Enlaces a estilos o scripts si es necesario -->
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f9f9f9;
+            background-image: url('https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun');
+            background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
+            background-repeat: no-repeat; /* Evitará la repetición de la imagen */
+        }
+
+        h1 {
+            font-family: 'Zeyada', cursive;
+            font-style: italic;
+            font-size: 70px;
+            /* Otros estilos que desees aplicar al título */
+        }
+    </style>
+</head>
+<body>
+    <!-- Contenido de la página de biografía -->
+    <header>
+        <h1>Biografía de Diana Sánchez</h1>
+    </header>
+
+    <section id="biografia-info">
+        <h2>Biografía de Diana Sánchez</h2>
+        <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!...</p>
+        <!-- Agrega más contenido aquí -->
+        <h2><a href="index.html">Atrás</a></h2>
+        
 <section id="cursos" class="contenido-con-imagen">
     <h2>Cursos</h2>
     <div class="curso">
         <img src="https://www.pexels.com/es-es/foto/mujer-arte-mesa-oficio-7233962/" alt="Curso 1">
-        <p>Velas Artesanales</p>
+        <p>1. Velas Artesanales</p>
     </div>
     <div class="curso">
         <img src="https://www.pexels.com/es-es/foto/mujer-creativo-vaso-mesa-5760907/" alt="Curso 2">
-        <p>Perfumería</p>
+        <p>2. Perfumería y splash</p>
     </div>
     <div class="curso">
-        <img src="imagen_curso3.jpg" alt="Curso 3">
-        <p>Nombre del Curso 3</p>
+        <img src="https://www.pexels.com/es-es/foto/pincel-rociador-estanteria-tiro-vertical-10558186/" alt="Curso 3">
+        <p>3. Productos de aseo</p>
+    </div>
+    <div class="curso">
+        <img src="https://www.pexels.com/es-es/foto/mujer-vaso-sin-rostro-transparente-7263026/" alt="Curso 3">
+        <p>4. Sales minerales y bombas de baño</p>
+    </div>
+    <div class="curso">
+        <img src="https://www.pexels.com/es-es/foto/luces-canica-bokeh-ambientador-14766418/" alt="Curso 3">
+        <p>5. Ambientadores de espacios</p>
+    </div>
+    <div class="curso">
+        <img src="https://www.pexels.com/es-es/foto/luces-canica-bokeh-ambientador-14766418/" alt="Curso 3">
+        <p>5. Ambientadores de espacios</p>
+    </div>
+    <div class="curso">
+        <img src="https://www.pexels.com/es-es/foto/persona-sosteniendo-pastel-blanco-y-marron-7500295/" alt="Curso 3">
+        <p>6. Jabones sólidos y líquidos- Shampoo</p>
     </div>
     <!-- Repite estos bloques para más cursos -->
 </section>
