--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <img src="https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun">
             </div>
             <div class="texto-derecha">
-                <h2>Cursos</h2>
+                <h2><a href="Cursos.html">Biografía</a></h2>
                 <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
             </div>
         </section>
