--- a/Cursos.html
+++ b/Cursos.html
@@ -40,31 +40,27 @@
 <section id="cursos" class="contenido-con-imagen">
     <h2>Cursos</h2>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/mujer-arte-mesa-oficio-7233962/" alt="Curso 1">
+        <img src="https://images.pexels.com/photos/7233962/pexels-photo-7233962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 1">
         <p>1. Velas Artesanales</p>
     </div>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/mujer-creativo-vaso-mesa-5760907/" alt="Curso 2">
+        <img src="https://images.pexels.com/photos/5760907/pexels-photo-5760907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 2">
         <p>2. Perfumería y splash</p>
     </div>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/pincel-rociador-estanteria-tiro-vertical-10558186/" alt="Curso 3">
+        <img src="https://images.pexels.com/photos/10558186/pexels-photo-10558186.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3">
         <p>3. Productos de aseo</p>
     </div>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/mujer-vaso-sin-rostro-transparente-7263026/" alt="Curso 3">
+        <img src="https://images.pexels.com/photos/7263026/pexels-photo-7263026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3">
         <p>4. Sales minerales y bombas de baño</p>
     </div>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/luces-canica-bokeh-ambientador-14766418/" alt="Curso 3">
+        <img src="https://images.pexels.com/photos/14766418/pexels-photo-14766418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3">
         <p>5. Ambientadores de espacios</p>
     </div>
     <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/luces-canica-bokeh-ambientador-14766418/" alt="Curso 3">
-        <p>5. Ambientadores de espacios</p>
-    </div>
-    <div class="curso">
-        <img src="https://www.pexels.com/es-es/foto/persona-sosteniendo-pastel-blanco-y-marron-7500295/" alt="Curso 3">
+        <img src="https://images.pexels.com/photos/7500295/pexels-photo-7500295.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
         <p>6. Jabones sólidos y líquidos- Shampoo</p>
     </div>
     <!-- Repite estos bloques para más cursos -->
