--- a/Cursos.html
+++ b/Cursos.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cursos</title>
-    <!-- Enlaces a estilos o scripts si es necesario -->
     <style>
         /* Estilos generales */
         body {
@@ -12,9 +11,6 @@
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
-            background-image: url('https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun');
-            background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
-            background-repeat: no-repeat; /* Evitará la repetición de la imagen */
         }
 
         h1 {
@@ -23,10 +19,28 @@
             font-size: 70px;
             /* Otros estilos que desees aplicar al título */
         }
+
+        /* Estilos para la cuadrícula de cursos */
+        .cursos-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr); /* 3 columnas iguales */
+            gap: 20px; /* Espacio entre las imágenes */
+            padding: 20px; /* Espacio alrededor de la cuadrícula */
+        }
+
+        .curso {
+            text-align: center;
+        }
+
+        .curso img {
+            max-width: 100%; /* Todas las imágenes tendrán el mismo ancho */
+            height: auto; /* Mantendrá la proporción de aspecto */
+            display: block; /* Evitará espacios en blanco debajo de las imágenes */
+            margin: 0 auto; /* Centrar las imágenes horizontalmente */
+        }
     </style>
 </head>
 <body>
-    <!-- Contenido de la página de biografía -->
     <header>
         <h1>Cursos</h1>
     </header>
@@ -37,31 +51,31 @@
         <!-- Agrega más contenido aquí -->
         <h2><a href="index.html">Atrás</a></h2>
         
-<section id="cursos" class="contenido-con-imagen">
-    <h2>Cursos</h2>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/7233962/pexels-photo-7233962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 1">
-        <p>1. Velas Artesanales</p>
-    </div>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/5760907/pexels-photo-5760907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 2">
-        <p>2. Perfumería y splash</p>
-    </div>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/10558186/pexels-photo-10558186.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3">
-        <p>3. Productos de aseo</p>
-    </div>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/7263026/pexels-photo-7263026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 4">
-        <p>4. Sales minerales y bombas de baño</p>
-    </div>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/14766418/pexels-photo-14766418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 5">
-        <p>5. Ambientadores de espacios</p>
-    </div>
-    <div class="curso">
-        <img src="https://images.pexels.com/photos/7500295/pexels-photo-7500295.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 6">
-        <p>6. Jabones sólidos y líquidos- Shampoo</p>
-    </div>
+        <!-- Contenedor de la cuadrícula de cursos -->
+        <div class="cursos-container">
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/7233962/pexels-photo-7233962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 1">
+                <p>1. Velas Artesanales</p>
+            </div>
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/5760907/pexels-photo-5760907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 2">
+                <p>2. Perfumería y splash</p>
+            </div>
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/10558186/pexels-photo-10558186.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3">
+                <p>3. Productos de aseo</p>
+            </div>
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/7263026/pexels-photo-7263026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 4">
+                <p>4. Sales minerales y bombas de baño</p>
+            </div>
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/14766418/pexels-photo-14766418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 5">
+                <p>5. Ambientadores de espacios</p>
+            </div>
+            <div class="curso">
+                <img src="https://images.pexels.com/photos/7500295/pexels-photo-7500295.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 6">
+                <p>6. Jabones sólidos y líquidos- Shampoo</p>
+            </div>
     <!-- Repite estos bloques para más cursos -->
 </section>
