--- a/Cursos.html
+++ b/Cursos.html
@@ -11,6 +11,9 @@
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
+            background-image: url('https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80');
+            background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
+            background-repeat: no-repeat; /* Evitará la repetición de la imagen */
         }
 
         h1 {
@@ -38,25 +41,6 @@
             display: block; /* Evitará espacios en blanco debajo de las imágenes */
             margin: 0 auto; /* Centrar las imágenes horizontalmente */
         }
-        <style>
-        /* Estilos generales */
-        body {
-            font-family: 'Arial', sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            background-image: url('https://images.unsplash.com/photo-1500462918059-b1a0cb512f1d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=387&q=80" alt="Imagen de cursos" class="imagen-comun');
-            background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
-            background-repeat: no-repeat; /* Evitará la repetición de la imagen */
-        }
-
-        h1 {
-            font-family: 'Zeyada', cursive;
-            font-style: italic;
-            font-size: 70px;
-            /* Otros estilos que desees aplicar al título */
-        }
-
     </style>
 </head>
 <body>
