--- a/Cursos.html
+++ b/Cursos.html
@@ -20,6 +20,7 @@
             font-family: 'Zeyada', cursive;
             font-style: italic;
             font-size: 70px;
+            color: white; /* Cambia el color del texto a blanco */
             /* Otros estilos que desees aplicar al título */
         }
 
@@ -33,6 +34,7 @@
 
         .curso {
             text-align: center;
+            color: white; /* Cambia el color del texto a blanco */
         }
 
         .curso img {
