--- a/index.html
+++ b/index.html
@@ -88,6 +88,13 @@
         header a {color: white;}
         header a:hover {color: #ddd;}
     
+
+    /* Estilos específicos para dispositivos móviles */
+    @media screen and (max-width: 767px) {
+        h1 {
+            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+        }
+        
         </style>
     <script>
         function mostrarBiografia() {
