--- a/Biografía.html
+++ b/Biografía.html
@@ -23,6 +23,12 @@
             font-size: 70px;
             /* Otros estilos que desees aplicar al título */
         }
+
+         /* Estilos específicos para dispositivos móviles */
+    @media screen and (max-width: 767px) {
+        h1 {
+            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+        }
     </style>
 </head>
 <body>
