--- a/Cursos.html
+++ b/Cursos.html
@@ -43,6 +43,12 @@
             display: block; /* Evitará espacios en blanco debajo de las imágenes */
             margin: 0 auto; /* Centrar las imágenes horizontalmente */
         }
+
+         /* Estilos específicos para dispositivos móviles */
+    @media screen and (max-width: 767px) {
+        h1 {
+            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+        }
     </style>
 </head>
 <body>
