--- a/Biografía.html
+++ b/Biografía.html
@@ -23,12 +23,14 @@
             font-size: 70px;
             /* Otros estilos que desees aplicar al título */
         }
-
-         /* Estilos específicos para dispositivos móviles */
-    @media screen and (max-width: 767px) {
-        h1 {
-            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+        /* Estilos específicos para dispositivos móviles */
+        @media screen and (max-width: 767px) {
+            h1 {
+                font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+            }
+            /* Puedes agregar más estilos específicos para dispositivos móviles aquí */
         }
+
     </style>
 </head>
 <body>
