--- a/Cursos.html
+++ b/Cursos.html
@@ -44,11 +44,14 @@
             margin: 0 auto; /* Centrar las imágenes horizontalmente */
         }
 
-         /* Estilos específicos para dispositivos móviles */
-    @media screen and (max-width: 767px) {
-        h1 {
-            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+            /* Estilos específicos para dispositivos móviles */
+        @media screen and (max-width: 767px) {
+            h1 {
+                font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+            }
+            /* Puedes agregar más estilos específicos para dispositivos móviles aquí */
         }
+
     </style>
 </head>
 <body>
