--- a/index.html
+++ b/index.html
@@ -89,11 +89,14 @@
         header a:hover {color: #ddd;}
     
 
-    /* Estilos específicos para dispositivos móviles */
-    @media screen and (max-width: 767px) {
-        h1 {
-            font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+        /* Estilos específicos para dispositivos móviles */
+        @media screen and (max-width: 767px) {
+            h1 {
+                font-size: 40px; /* Cambiar el tamaño del título para dispositivos móviles */
+            }
+            /* Puedes agregar más estilos específicos para dispositivos móviles aquí */
         }
+
         
         </style>
     <script>
