--- a/Cursos.html
+++ b/Cursos.html
@@ -59,7 +59,7 @@
         <h1>Cursos</h1>
     </header>
 
-    <section id="biografia-info">
+    <section id="Cursos-info">
         <h2>Cursos</h2>
         <p>Explora una variedad de cursos diseñados para aprender sobre la ciencia y el marketing en la industria cosmética.</p>
         <!-- Agrega más contenido aquí -->
