--- a/Cursos.html
+++ b/Cursos.html
@@ -68,27 +68,27 @@
         <!-- Contenedor de la cuadrícula de cursos -->
         <div class="cursos-container">
             <div class="curso">
-                <img src="https://images.pexels.com/photos/7233962/pexels-photo-7233962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 1" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/7233962/pexels-photo-7233962.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 1" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>1. Velas Artesanales</p>
             </div>
             <div class="curso">
-                <img src="https://images.pexels.com/photos/5760907/pexels-photo-5760907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 2" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/5760907/pexels-photo-5760907.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 2" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>2. Perfumería y splash</p>
             </div>
             <div class="curso">
-                <img src="https://images.pexels.com/photos/10558186/pexels-photo-10558186.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/10558186/pexels-photo-10558186.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 3" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>3. Productos de aseo</p>
             </div>
             <div class="curso">
-                <img src="https://images.pexels.com/photos/7263026/pexels-photo-7263026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 4" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/7263026/pexels-photo-7263026.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 4" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>4. Sales minerales y bombas de baño</p>
             </div>
             <div class="curso">
-                <img src="https://images.pexels.com/photos/14766418/pexels-photo-14766418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 5" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/14766418/pexels-photo-14766418.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 5" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>5. Ambientadores de espacios</p>
             </div>
             <div class="curso">
-                <img src="https://images.pexels.com/photos/7500295/pexels-photo-7500295.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 6" style="max-height: 200px;">
+                <img src="https://images.pexels.com/photos/7500295/pexels-photo-7500295.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Curso 6" style="max-height: 200px; width: 200px; height: 200px;">
                 <p>6. Jabones sólidos y líquidos- Shampoo</p>
             </div>
     <!-- Repite estos bloques para más cursos -->
