--- a/Artículos, tendencias y más.html
+++ b/Artículos, tendencias y más.html
@@ -41,7 +41,8 @@
 
     <section id="biografia-info">
         <h2>Artículos, tendencias y más</h2>
-        <p>¡Saludos! Soy Diana Sánchez, una apasionada Química Farmacéutica con más de una década de experiencia en el apasionante universo de la industria cosmética. Mi trayecto comenzó en los laboratorios de investigación, donde mi curiosidad y pasión por la ciencia me guiaron a explorar las moléculas detrás de los productos de belleza que amamos. A medida que mi carrera evolucionó, me sumergí en la gerencia de marketing, fusionando mi sólido conocimiento científico con estrategias creativas para dar vida a productos innovadores. Mi posgrado en marketing me permitió descubrir nuevas formas de conectar con los consumidores y adelantarme a las tendencias futuras. ¡Bienvenido a este emocionante viaje lleno de belleza, innovación y educación en mi universo cosmético!...</p>
+        <p>Cristal Clear, Jabón cristalino</p>
+        <h2><a href="index.html">Atrás</a></h2>
         <!-- Agrega más contenido aquí -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
