--- a/Artículos.html
+++ b/Artículos.html
@@ -12,7 +12,6 @@
             margin: 0;
             padding: 0;
             background-color: #f9f9f9;
-            background-image: url('https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias" class="imagen-comun');
             background-size: cover; /* Esto ajustará la imagen al tamaño de la ventana */
             background-repeat: no-repeat; /* Evitará la repetición de la imagen */
         }
@@ -39,11 +38,11 @@
         <h1>Artículos, tendencias y más</h1>
     </header>
 
-    <section id="Artículos, tendecias y más">
+    <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
         <p>Cristal Clear, Jabón cristalino</p>
-        <h2><a href="Artículos.html">Ver más</a></h2>
-        <!-- Agrega más contenido aquí -->
+        <img src="C:\Users\Hogar\OneDrive\Escritorio\ARTICULOS PÁGINA WEB\Cristal Clear.png" alt="Descripción de la imagen">
+        <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
 
