--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                 <img src="https://images.unsplash.com/photo-1556139943-4bdca53adf1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1374&q=80" alt="Imagen de tendencias" class="imagen-comun">
             </div>
             <div class="texto-derecha">
-                <h2><a href="Artículos, tendencias y más.html">Cursos</a></h2>
+                <h2><a href="Artículos, tendencias y más.html">Artículos, tendencias y más</a></h2>
                 <p>Mantente al día con las últimas tendencias y novedades en el mundo de los cosméticos.</p>
             </div>
         </section>
