--- a/Artículos.html
+++ b/Artículos.html
@@ -41,7 +41,7 @@
     <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
         <p>Cristal Clear, Jabón cristalino</p>
-        <img src="C:\Users\Hogar\OneDrive\Escritorio\ARTICULOS PÁGINA WEB\Cristal Clear.png" alt="Descripción de la imagen">
+        <img src="https://www.canva.com/design/DAFvCRl8zyM/FkLCfuA3KzcQgzM-1p_KpQ/edit" alt="Descripción de la imagen">
         <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
