--- a/Artículos.html
+++ b/Artículos.html
@@ -41,7 +41,7 @@
     <section id="Articulos, tendencias y más  ">
         <h2>Artículos, tendencias y más</h2>
         <p>Cristal Clear, Jabón cristalino</p>
-        <img src="https://www.canva.com/design/DAFvCRl8zyM/FkLCfuA3KzcQgzM-1p_KpQ/edit" alt="Descripción de la imagen">
+        <img src="https://drive.google.com/file/d/1g4qYL9rCGW5q6U0DofiXhNIcs3y4aO0q/view?usp=drive_link" alt="Descripción de la imagen">
         <!-- Fin de la imagen -->
         <h2><a href="index.html">Atrás</a></h2>
     </section>
